auto-test/tests/chapter_15/invalid_types/cast_to_array_type.c
int main(void)
{
    int arr[10];
    
    return (int[10])arr;
}